--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Tour has begun WHO IS EXCITED?? #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">4 minutes ago</div>
+                        <div class="date">32 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Passing the5ers Prop Firm Evaluation Live (Profit Update and new Expert Advisor)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">46 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on The Great Adventure of Awakening Consciousness</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>This Grid Trading Strategy is INSANE (High Win Rate)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Impact of Early Sexual Exposure | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>How to control emotions while trading...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - The Journey from Finite to Infinite</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>Tour vlog (ft ItalianBach, ChrisMD, George Clarke, Liv & more)</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -442,7 +442,7 @@
                     <div class="video-info">
                         <h3>He Solved Racism</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -796,7 +796,7 @@
                     <div class="video-info">
                         <h3>98 hours fermentation Pizza Dough. this is the result!!!!( Dead Pizza Dough)</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2525,7 +2525,7 @@
                     <div class="video-info">
                         <h3>Pizza tutoria in few sec @KyleIstook</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2602,7 +2602,7 @@
                     <div class="video-info">
                         <h3>Teaching   a Subscriber  Pizza techniques</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 21, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Passing the5ers Prop Firm Evaluation Live (Profit Update and new Expert Advisor)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">46 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>This Grid Trading Strategy is INSANE (High Win Rate)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5798,7 +5798,7 @@
                         <div class="video-info">
                             <h3>How to control emotions while trading...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on The Great Adventure of Awakening Consciousness</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Impact of Early Sexual Exposure | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - The Journey from Finite to Infinite</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9417,7 +9417,7 @@
                         <div class="video-info">
                             <h3>98 hours fermentation Pizza Dough. this is the result!!!!( Dead Pizza Dough)</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9637,7 +9637,7 @@
                         <div class="video-info">
                             <h3>Pizza tutoria in few sec @KyleIstook</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -9659,7 +9659,7 @@
                         <div class="video-info">
                             <h3>Teaching   a Subscriber  Pizza techniques</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 21, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Tour has begun WHO IS EXCITED?? #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">4 minutes ago</div>
+                            <div class="date">32 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>Tour vlog (ft ItalianBach, ChrisMD, George Clarke, Liv & more)</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10309,7 +10309,7 @@
                         <div class="video-info">
                             <h3>He Solved Racism</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
